Fix java11 collect.toList